# endeavor-assistant

./: .env.example  .gitignore  .gitmodules  API_TESTS.http  Cargo.toml  README.md  docker-compose.yml  rustfmt.toml
api-server/: Cargo.toml
api-server/src/: main.rs
api-server/src/routes/: users.rs
api-server/src/services/: mod.rs
api-shared/: Cargo.toml  rustfmt.toml
api-shared/src/: error.rs
api_server/: Cargo.toml  package.json  pnpm-lock.yaml  vite.config.ts
api_server/src/: error.rs  main.rs  prelude.rs
api_server/src/routes/: mod.rs  ping.rs  req.rs  users.rs
api_server/src/services/: mod.rs
api_server/src/utils/: mod.rs
api_shared/: Cargo.toml
api_shared/src/: prelude.rs
app-ui/: Cargo.toml  Dioxus.toml  dioxus.html  unocss.config.ts
app-ui/src/: main.rs
app-ui/src/components/: chart.rs  footer.rs  mod.rs  nav_bar.rs  toast.rs
app-ui/src/components/form/: form_button.rs  form_input.rs  form_textarea.rs
app-ui/src/pages/: home.rs  new_task.rs  settings.rs  sign_in.rs  sign_up.rs
database/: init.sql
do-it-ui/: Cargo.toml  Dioxus.toml  Shuttle.toml  package.json  pnpm-lock.yaml  unocss.config.ts
do-it-ui/src/: main.rs
do-it-ui/src/components/: footer.rs  mod.rs  nav_bar.rs
do-it-ui/src/components/form/: form_button.rs  form_input.rs  form_textarea.rs  mod.rs
do-it-ui/src/pages/: home.rs  mod.rs  new_task.rs  settings.rs  sign_in.rs  sign_up.rs
src/: error.rs  lib.rs  main.rs  prelude.rs
