[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_shared = { path = "../api_shared" }
axum = { version = "0.6.1", features = ["headers", "http2", "multipart"] }
axum-macros = "0.3.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
miette = { version = "5.5.0", features = ["fancy"] }
