[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_shared = { path = "../api_shared" }
axum = "0.6.4"
axum-macros = "0.3.2"
thiserror = "1"
tokio = { version = "1.22.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
miette = { version = "5.5.0", features = ["fancy"] }
