[package]
name = "api_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axum = "0.6.0-rc.2"
# miette = { version = "5.4.1", features = ["fancy"]}
# thiserror = "1"
# tokio = { version = "1", features = ["full"]}

# [dev-dependencies]
# anyhow = "1"
