[package]
name = "app-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]

[dependencies]
dioxus = "0.3.1"
dioxus-router = "0.3.0"
log = "0.4.17"
# Dioxus Web with WASM and all available Web APIs
dioxus-web = "0.3.0"
# console_error_panic_hook = "0.1.7"
# wasm-logger = "0.2.0"
# Dioxus LiveView with Axum and WebSockets but limited Web APIs
# axum = { version = "0.6.4", features = ["ws"] }
# dioxus-liveview = { version = "0.3.0", features = ["axum"] }
# Shuttle.rs deploy service
# shuttle-service = { version = "0.9.0", features = ["web-axum"] }
# sync_wrapper = "0.1.1"
# shuttle-static-folder = "0.9.0"
# tower-http = { version = "0.3.5", features = ["fs"] }

# optimize WASM for size
[profile.release]
opt-level = "z"
debug = false
lto = true
