[package]
name = "do-it-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
dioxus = "0.3.1"
dioxus-router = "0.3.0"
dioxus-web = "0.3.0"
log = "0.4.17"
wasm-logger = "0.2.0"

[profile.release]
opt-level = "z"
debug = false
lto = true